FE: fix overflow of Dimensions filter panel (desktop and mobile).

--- a/resources/assets/js/Collection/Filters/Dimensions.scss
+++ b/resources/assets/js/Collection/Filters/Dimensions.scss
@@ -6,7 +6,7 @@
   -webkit-overflow-scrolling: touch;
 
   @include breakpoint(1025px) {
-    overflow: hidden;
+    overflow: visible;
     position: absolute;
     top: 0;
     left: 0;
@@ -33,6 +33,8 @@
   background-color: $petrol-medium;
   @include breakpoint(1025px) {
     display: flex;
+    overflow-x: hidden;
+    overflow-y: auto;
     flex-flow: column nowrap;
     align-items: center;
     justify-content: flex-start;
